Se separaron los presenters

--- a/WinFormsAppBindings/WinFormsAppBindings.csproj
+++ b/WinFormsAppBindings/WinFormsAppBindings.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BusinessObjects\BusinessObjects.csproj" />
+    <ProjectReference Include="..\Presenters\Presenters.csproj" />
   </ItemGroup>
 
   <ItemGroup>
