--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ BusinessObjects/obj/
 *.v2
 BusinessObjects/bin/
 packages/
+Presenters/obj/Presenters.csproj.nuget.dgspec.json
+Presenters/obj/Presenters.csproj.nuget.g.props
+Presenters/obj/Presenters.csproj.nuget.g.targets
+Presenters/obj/project.assets.json
+Presenters/obj/project.nuget.cache
