--- a/WinFormsAppBindings/App.config
+++ b/WinFormsAppBindings/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Curso" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=Curso;Data Source=DESKTOP-N967G0J" providerName="System.Data.SqlClient"/>
+    <add name="Curso" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=Curso;Data Source=libra" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
     <providers>
