--- a/WisejWebPageApplication1/bin/WisejWebPageApplication1.dll.config
+++ b/WisejWebPageApplication1/bin/WisejWebPageApplication1.dll.config
@@ -1,15 +1,24 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework"
+      type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+      requirePermission="false"/>
+  </configSections>
+	<connectionStrings>
+		<add name="Curso" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=Curso;Data Source=libra" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
   <appSettings>
     <add key="Wisej.LicenseKey" value=""/>
     <add key="Wisej.DefaultTheme" value="Blue-1"/>
   </appSettings>
   <system.web>
-    <compilation debug="true" />
+    <compilation debug="true"/>
     <httpRuntime targetFramework="4.6" maxRequestLength="1048576"/>
     <httpModules>
       <add name="Wisej" type="Wisej.Core.HttpModule, Wisej.Framework"/>
@@ -21,7 +30,7 @@
       <add name="Wisej" type="Wisej.Core.HttpModule, Wisej.Framework"/>
     </modules>
     <handlers>
-      <add name="json" verb="*" path="*.json" type="System.Web.HttpForbiddenHandler" />
+      <add name="json" verb="*" path="*.json" type="System.Web.HttpForbiddenHandler"/>
       <add name="wisej" verb="*" path="*.wx" type="Wisej.Core.HttpHandler, Wisej.Framework"/>
     </handlers>
     <security>
@@ -31,7 +40,7 @@
     </security>
     <defaultDocument enabled="true">
       <files>
-        <add value="Default.html" />
+        <add value="Default.html"/>
       </files>
     </defaultDocument>
   </system.webServer>
@@ -43,4 +52,9 @@
       </listeners>
     </trace>
   </system.diagnostics>-->
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+    </providers>
+  </entityFramework>
 </configuration>
