--- a/WisejWebPageApplication1/WisejWebPageApplicationProject.csproj
+++ b/WisejWebPageApplication1/WisejWebPageApplicationProject.csproj
@@ -67,17 +67,17 @@
     <Compile Include="MainPage.Designer.cs">
       <DependentUpon>MainPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="PageCustomer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PageCustomer.designer.cs">
+      <DependentUpon>PageCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="PageVendor.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="PageVendor.Designer.cs">
       <DependentUpon>PageVendor.cs</DependentUpon>
-    </Compile>
-    <Compile Include="PageCustomer.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="PageCustomer.Designer.cs">
-      <DependentUpon>PageCustomer.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -124,11 +124,11 @@
     <EmbeddedResource Include="MainPage.resx">
       <DependentUpon>MainPage.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PageVendor.resx">
-      <DependentUpon>PageVendor.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="PageCustomer.resx">
       <DependentUpon>PageCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PageVendor.resx">
+      <DependentUpon>PageVendor.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
