--- a/WisejWebPageApplication1/WisejWebPageApplication1.csproj
+++ b/WisejWebPageApplication1/WisejWebPageApplication1.csproj
@@ -46,6 +46,7 @@
     <Content Include="Default.html" />
     <Content Include="Default.json" />
     <Content Include="favicon.ico" />
+    <Content Include=".editorconfig" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
